objects/DEF_QuoteCreateSMAX2NAV__e.object
<CustomObject>
    <fields>
        <fullName>Back_Office_Ref_Number__c</fullName>
        <label>Back Office Ref Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldFeedback__c</fullName>
        <label>Field Feedback</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Quote Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC_Account__c</fullName>
        <label>Account</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC_Contact__c</fullName>
        <label>Contact</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC_Service_Order__c</fullName>
        <label>Work Order</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC_Status__c</fullName>
        <label>Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceRequest__c</fullName>
        <label>Service Request</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>DEF_QuoteCreateSMAX2NAV</label>
    <pluralLabel>DEF_QuoteCreateSMAX2NAVS</pluralLabel>
</CustomObject>